Fix #2311: Add word-wrap for exploration card content

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -4166,3 +4166,7 @@ md-card.preview-conversation-skin-supplemental-card {
   right: -25px;
   top: 175px;
 }
+
+.conversation-skin-tutor-card-content {
+  word-wrap: break-word;
+}
